# OpenCareOS

./: README.md
hospital-app/: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
hospital-app/app/: main.py
hospital-app/app/api/routers/: __init__.py  ai.py  auth.py  documents.py  encounters.py  patients.py
hospital-app/app/core/: database.py  exceptions.py
hospital-app/app/core/config/: settings.py
hospital-app/app/models/: __init__.py  audit.py  base.py  document.py  encounter.py  patient.py  user.py
hospital-app/app/repositories/: __init__.py  base.py  document.py  encounter.py  patient.py  user.py
hospital-app/app/schemas/: auth.py  base.py  document.py  encounter.py  patient.py
hospital-app/app/services/: ai.py  auth.py  document.py  encounter.py  patient.py
hospital-app/app/static/css/: styles.css
hospital-app/app/static/js/: app.js
hospital-app/app/templates/: base.html
hospital-app/app/templates/auth/: login.html  register.html
hospital-app/app/templates/chat/: index.html
hospital-app/app/templates/doctor/: dashboard.html
hospital-app/app/templates/patient/: dashboard.html
hospital-app/app/utils/: helpers.py
hospital-app/scripts/: seed_database.py
