[project]
name = "opencareos"
version = "0.1.0"
description = "The Open Source AI Operating Layer for Healthcare"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "motor>=3.4.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "pymongo>=4.6.0",
    "httpx>=0.26.0",
    "python-magic>=0.4.27",
    "python-magic-bin>=0.4.27",
    "markdown>=3.5.0",
    "pygments>=2.17.0",
    "python-multipart>=0.0.6",
    "httpx>=0.26.0",
    "httpx-oauth>=0.11.0",
    "email-validator>=2.1.0",
    "python-dateutil>=2.8.2",
    "bcrypt>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "faker>=20.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "isort>=5.13.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "W", "C90", "ANN", "B", "C4", "DTZ", "T20", "SIM", "ARG", "PTH", "ERA", "PL", "TRY"]
ignore = ["ANN001", "ANN002", "ANN003", "ARG001", "ARG002", "B008", "C901", "SIM103", "PLW0601", "TRY003", "PTH123"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
asyncio_default_fixture_loop_scope = "function"